# codechallenge-selenium

./: .gitignore  BlueNote-Tests-Lucie.side  BlueNote_Comments.docx  README.md  pyproject.toml  pytest.ini  report.html
base_case_flows/: base_about_us.py  base_clinical_trials.py  base_covid_care.py  base_homepage_flow.py  base_more_news.py
data_json/: json_file_paths.py
data_json/home_page/: contact_us_form.json
data_json/links/: email.json  header_links.json
locators/: locators_about_us.py  locators_blog.py  locators_careers.py  locators_clinical_trials.py  locators_covidcare.py  locators_homepage.py  locators_news.py  locators_why.py
page_functions/: about.py  clinicaltrials.py  homepage.py  morenews.py  video.py
tests/: test_aboutus.py  test_clinicaltrials.py  test_covidcare.py  test_homepage.py  test_morenews.py
tests/latest_logs/tests.test_homepage.HomepageTests.test_homepage_links/: basic_test_info.txt  page_source.html
tests/latest_logs/tests.test_homepage.HomepageTests.test_navigation_links/: basic_test_info.txt
utils/: base_set_up.py  common_ui_actions.py  log.py  utilities.py
